--- a/favorite-things.html
+++ b/favorite-things.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>J's favorite things</title>
   </head>
   <body>
@@ -30,5 +31,6 @@
     </ol>
 
     <p>Thanks for reading about me!</p>
+    <p>Click <a href="favorite-places.html">here</a> to learn about my favorite places!</p>
   </body>
 </html>
