--- a/favorite-places.html
+++ b/favorite-places.html
@@ -30,6 +30,6 @@
       </a>
     </ul>
 
-    <p>Thanks for taking the time to read about our dog, Oreo!</p>
+    <p>Thanks for taking the time to read about our favorite places!</p>
   </body>
 </html>
