--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <link href="css/my-first-webpage.css" rel="stylesheet" type="text/css">
     <title>Web Page #1!</title>
   </head>
   <body>
-    <h1>My first web page</h1>
+    <h1>My First Webpage</h1>
     <h2>Written with the guidance of <em>Epicodus</em></h2>
 
     <p>This is my <strong>first web page</strong>!</p>
